# OCTALUME

./: .gitignore  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVERSATION_EXPORT_FULL.md  DEEP_DIVE_COMPARISON.md  DIRECTORY_STRUCTURE.md  DOCUMENTATION_INDEX.md  Dockerfile  FINAL_STATUS_REPORT.md  FRAMEWORK_VISUALIZATION.md  LICENSE  MARKETING.md  NOTICE  QUICKSTART.md  QUICK_RECOVERY.md  README.md  SECURITY.md  SESSION_ARCHIVE_JAN22-23_2026.md  SESSION_COMPLETE_SUMMARY.md  SETUP_GUIDE.md  SOCIAL_PREVIEW.md  TESTING_GUIDE.md  docker-compose.yml  pyproject.toml  pytest.ini
.claude/: CONTEXT_ENGINEERING.md  HOOKS.md  MEMORY_BANK.md  ORCHESTRATOR.md  project-state.template.json  settings.json
.claude/agents/: CODING.md  INITIALIZER.md  agent-configs.json  agent-spawner.js
.claude/bindings/: task-skill-binder.js
.claude/commands/: analyze-codebase.md  changelog.md  discover-roadmap.md  explain-architecture.md  find-improvements.md  github-issue.md  github-pr.md  lifecycle-feature.md  lifecycle-init.md  lifecycle-phase.md  lifecycle-scan.md  memory-context.md  memory-save.md  memory-search.md  memory-semantic-search.md  memory-stats.md  qa-ai-review.md  qa-fix.md  qa-run.md  qa-status.md  security-check.md  stack-detect.md  v2.2-slash-commands.md  worktree-ai-merge.md  worktree-discard.md  worktree-init.md  worktree-list.md  worktree-merge.md
.claude/compaction/: compaction-config.json  context-compactor.js
.claude/escalation/: escalation-manager.js
.claude/handoff/: handoff-verify.js
.claude/hooks/: post-session.sh  post-tool-response.sh  pre-tool-use.sh  user-prompt-submit.sh
.claude/insights/: insight-extractor.js  insight-schema.json
.claude/integrations/: github.json  gitlab.json  linear.json
.claude/mcp-server/: .npmrc  README.md  index.js  package-lock.json  package.json
.claude/memory/: delete.sh  list.sh  load.sh  memory-lock.js  memory-manager.js  memory.json  save.sh  search.sh  semantic-search.js  state-sync.js
.claude/qa/: ai-reviewer.md  config.json
.claude/qa/criteria/: P1-criteria.json  P2-criteria.json  P3-criteria.json  P4-criteria.json  P5-criteria.json  P6-criteria.json  P7-criteria.json  P8-criteria.json
.claude/recovery/: attempt-history.json  recovery-config.json  recovery-manager.js
.claude/security/: allowlist.json  security-check.js
.claude/security/validators/: validate-chmod.sh  (+2 more)
.claude/tasks/: TASK_TEMPLATE_AWAITING_INPUT.md
.claude/templates/: example-feature-list.json  example-project-state.json
.claude/thinking/: thinking-levels.json  thinking-manager.js
.claude/tools/: TOOL_SEARCH.md
.claude/validators/: phase-gate-validator.js  task-validators.js
.claude/worktrees/: active.json
.githooks/: commit-msg  pre-commit  pre-push
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  question.md
.github/workflows/: ci.yml  pr.yml  release.yml
.octalume/: project-state.json
docs/: AUTO_CLAUDE_DEEP_ANALYSIS.md  AUTO_CLAUDE_HIDDEN_SECRETS.md  AUTO_CLAUDE_VS_OCTALUME_MATRIX.md  COMPREHENSIVE_REVIEW_REPORT.md  MATRIX_TABLE.md  V2.2_IMPLEMENTATION_PLAN.md  agents.md  architecture.md  cli-reference.md  compliance.md  getting-started.md  index.md  mcp-tools.md  phases.md  python-api.md
octalume/: __init__.py  cli.py
octalume/a2a/: __init__.py  messaging.py  protocol.py
octalume/agents/: __init__.py  architecture.py  base.py  deployment.py  development.py  operations.py  orchestrator.py  planning.py  quality.py  requirements.py  vision.py
octalume/compliance/: __init__.py  gdpr.py  hipaa.py  pci.py  scanner.py  soc2.py
octalume/core/: __init__.py  engine.py  gates.py  memory.py  models.py  orchestrator.py  state.py  tenancy.py
octalume/idea/: __init__.py  parser.py  pipeline.py  speckit.py  templates.py
octalume/mcp/: __init__.py  server.py
octalume/templates/: __init__.py  project_templates.py
octalume/utils/: __init__.py  cache.py  config.py  logging.py
octalume/worker/: __init__.py  celery_app.py  tasks.py
schemas/: agent.schema.json  artifact.schema.json  gate.schema.json  phase.schema.json
scripts/: ai-merge-resolver.sh  changelog-generator.sh  github-integration.sh  gitlab-integration.sh  init-project.sh  linear-integration.sh  qa-ai-review.sh  qa-runner.sh  stack-detector.sh  worktree-manager.sh
skills/phase_01_vision_strategy/: SKILL.md
skills/phase_02_requirements_scope/: SKILL.md
skills/phase_03_architecture_design/: SKILL.md
skills/phase_04_development_planning/: SKILL.md
skills/phase_05_development_execution/: SKILL.md
skills/phase_06_quality_security/: SKILL.md
skills/phase_07_deployment_release/: SKILL.md
skills/phase_08_operations_maintenance/: SKILL.md
tests/: __init__.py  conftest.py
tests/integration/: test_api.py  test_lifecycle.py  test_mcp.py
tests/unit/: __init__.py  test_compliance.py  test_engine.py  test_mcp.py
web/backend/: dependencies.py  main.py
web/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
(+79 files in other folders)
